# OBS-LIKE-Rust

./: Cargo.toml  README.md  hardware_manager.rs  lib.rs
sensors/: accelerometer.rs  air_quality.rs  faceid_sensor.rs  fingerprint_sensor.rs  gyroscope.rs  heart_rate.rs  heart_rate_sensor.rs  himidity.rs  iris_sensor.rs  light.rs  magnetometer.rs  mod.rs  proximity.rs  puls_oximeter.rs  pulse_oximetry.rs  step_counter.rs  temperature.rs  thermometer.rs  uv.rs
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  ping.rs  state.rs  transmitter.rs
src/capture/: audio.rs  bluetooth.rs  ethernet.rs  input.rs  mod.rs  preprocess.rs  screen.rs
src/utils/: mod.rs  queue.rs  thread_pool.rs  timer.rs
storage/: encryption.rs  flash.rs  fs.rs  mod.rs  nvme.rs  sd_card.rs  ufs.rs  usb_storage.rs
tests/: scheduler.rs  test_all.rs  test_audio.rs  test_bluetooth.rs  test_ethernet.rs  test_input.rs  test_ping.rs  test_screen.rs  test_state.rs  test_transmitter.rs
thermal/: battery_sensor.rs  cpu_sensor.rs  fan_control.rs  gpu_sensor.rs  manager.rs  mod.rs  passive_cooling.rs  thermal_control.rs  thermal_management.rs  thermal_sensor.rs  thermal_throttling.rs
