[package]
name = "visualisation_module"
version = "0.1.0"
edition = "2021"

[lib]
name = "visualisation_module"
path = "src/lib.rs"

[[bin]]
name = "visualisation_module"
path = "src/main.rs"

[dependencies]
# Capture écran
scrap = "0.5"

# Audio
cpal = "0.17"
hound = "3.5"

# Input clavier/souris
rdev = "0.5"
enigo = "0.1"

# Réseau
btleplug = "0.11"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4"

# Système
sysinfo = "0.30"

# Concurrence
crossbeam = "0.8"

# Compression
image = "0.24"
flate2 = "1.0"

# Logs et erreurs
thiserror = "1.0"
chrono = "0.4"

# Thread pool et timers
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"

[[test]]
name = "test_all"
path = "tests/test_all.rs"

[[test]]
name = "test_screen"
path = "tests/test_screen.rs"

[[test]]
name = "test_audio"
path = "tests/test_audio.rs"

[[test]]
name = "test_input"
path = "tests/test_input.rs"

[[test]]
name = "test_transmitter"
path = "tests/test_transmitter.rs"

[[test]]
name = "test_ethernet"
path = "tests/test_ethernet.rs"

[[test]]
name = "test_bluetooth"
path = "tests/test_bluetooth.rs"

[[test]]
name = "test_ping"
path = "tests/test_ping.rs"

[[test]]
name = "test_state"
path = "tests/test_state.rs"
